--- a/.github/workflows/alioth.yml
+++ b/.github/workflows/alioth.yml
@@ -20,7 +20,7 @@ jobs:
     
       - uses: actions/checkout@v3
       - name: Build Kernel Alioth
-        run: cd kernel && bash kbuild.sh alioth null
+        run: cd kernel/ && bash kbuild.sh alioth null
         env:
            token: ${{ secrets.TOKEN }}
            chat_id: ${{ secrets.CHAT_ID }}
