--- a/.github/workflows/alioth.yml
+++ b/.github/workflows/alioth.yml
@@ -9,7 +9,9 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on:
+      group: ubuntu-runners
+      labels: ubuntu-20.04-16core
     container:
       image: nexgang/ubuntu:latest
 
